[package]
name = "temporalcache_py"
version = "0.1.6"
edition = "2021"
publish = false

[lib]
name = "temporalcache"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
temporalcache = { path = "./rust", version = "*" }
pyo3 = { version = "0.24", features = ["abi3-py39", "extension-module", "multiple-pymethods"] }
strum = "0.24.1"

[profile.release]
panic = 'abort'
lto = true
