[package]
name = "temporalcache_py"
version = "0.1.6"
edition = "2021"
publish = false

[lib]
name = "temporalcache"
path = "rust/python/lib.rs"
crate-type = ["cdylib"]

[dependencies]
temporalcache = { path = "./rust", version = "*" }
pyo3 = { version = "0.28.2", features = ["abi3", "extension-module", "multiple-pymethods"] }

[profile.release]
panic = 'abort'
lto = true

[workspace]
members = [
    "rust",
]
