[package]
name = "temporalcache"
version = "0.1.6"
authors = ["the temporal-cache authors <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/temporal-cache"
description = ""

[lib]
name = "temporalcache"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.test.junit]
path = "junit.xml"
